# raptai

./: README.md
fast-next-app/: README.md
fast-next-app/backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
fast-next-app/backend/alembic/versions/: 2b8c9e3bd01f_add_column_fullname.py
fast-next-app/backend/src/api/v1/: routers.py
fast-next-app/backend/src/api/v1/endpoints/: auth.py  users.py
fast-next-app/backend/src/app/: main.py
fast-next-app/backend/src/core/: security.py
fast-next-app/backend/src/dependencies/: database.py
fast-next-app/backend/src/models/: user.py
fast-next-app/backend/src/repositories/: auth_repository.py  user_repository.py
fast-next-app/backend/src/schemas/: user.py
fast-next-app/backend/src/services/: auth_service.py  user_service.py
fast-next-app/frontend/: .env  package.json
fast-next-app/frontend/src/app/: layout.tsx
fast-next-app/frontend/src/store/: store.ts
rag-langchain-milvus/: .gitIgnore  README.md
rag-pinecone-openai/: README.md
rag-pinecone-openai/api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
rag-pinecone-openai/api/src/: main.py
rag-pinecone-openai/chat/: chat.py  process.py  pyproject.toml
raptai-fastapi/: .env.example  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml
raptai-fastapi/src/api/v1/: routers.py
raptai-fastapi/src/app/: main.py
raptai-fastapi/src/core/: config.py
raptai-fastapi/src/models/: user.py
raptai-fastapi/src/schemas/: user.py
raptai-fastapi/src/services/: auth_service.py
(+6 files in other folders)
